<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:background="@color/black"
        android:contentDescription="@string/imagen_de_producto" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        tools:text="Texto 1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        tools:text="Texto 2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        tools:text="Texto 3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTypeProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="8dp"
        tools:text="Texto 4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btneliminar"
        android:text="@string/eliminar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atras" />
</LinearLayout>
